Fix author section formatting and add call button in index.html; update styles for better readability

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ img {
   object-fit: cover;
   border-radius: 50%;
 }
+p{
+    color: hsl(0, 0%, 100%);
+}
 button{
     display: block;
     margin: auto;
@@ -30,11 +33,15 @@ button{
     border-radius: 10px;
     width: 100%;
 }
-h3{
-    color:  hsl(0, 0%, 100%);
+a{
+    text-decoration: none;
+    color: white;
 }
-p{
-    color: hsl(0, 0%, 100%);
+button:hover {
+    background-color: pink;
+}
+a:hover{
+    color: purple;
 }
 .author{
     margin: 30px;
